Fixed the horizontal scroll when navbar collapses         Next: Adjust the logo and the glyphicon

--- a/login.css
+++ b/login.css
@@ -1,91 +1,112 @@
 
-  body,html{
-	background-color: white;
-	font-family: Montserrat, sans-serif;
- /*height: 100%;*/
- overflow-x : hidden
+  
+@media (max-width: 768px) {
+    #myNavbar{
+       width:100%;
+    }
+}
+
+* {
+    box-sizing: border-box;
+}
+
+  body{
+  background-color: white;
+  font-family: Montserrat, sans-serif;
+  overflow-y: hidden;                 /* hide scrollbars   */
+  overflow-x: hidden; 
  }
 
- 
   .navbar {
       font-family: Montserrat, sans-serif;
       background-color: white;
       height:13%;
       font-size: 11px !important;
+      padding: 15px;
   }
   .navbar li a, .navbar { /* //font color of nav bar */
-      color: #0E182C!important;
+      /*color: #0E182C!important;*/
+     
+
   }
   .navbar-nav li a:hover { /* //font color upon hover */
   
   }
   .navbar-nav li.active a { /* //font bg of active  */
       background-color: white !important;
-	  color: #ff8c5b!important;
+    color: #ff8c5b!important;
+    height: 10%;
   }
   .navbar-brand{
-	color: #ff8c5b!important;
+  color: #ff8c5b!important;
+ margin-top: 1% !important;
+  letter-spacing: 2px;
   }
 
 .navbar-right{
-	margin-top:0.5%;
 }
+
+
+
 
 .bar-align{
   margin-top:1.5%;
 }
 
-#pwd-log{
-	margin-left:3%;
-}
+/*#pwd-log{
+  margin-left:3%;
+}*/
 
 #login-but{
-	margin-left:15%;
+  /*margin-left:15%;*/
+  width: 100%;
 }
 
 #sign-but{
-	height:7%;
-	width:100%;
+  height:7%;
+  width:100%;
 }
-
-#home img{
-
-  /*background-image: url("moment1.jpg");*/
-  background-size: 100% 100%;
-  opacity:0.9;
-  width:100% !important;
-  height: 100% !important;
-
- }
- 
- #home
- {
-    padding-right: 0%;
-}
-
 
 .signup{
-
-  opacity: 0.7;
-  padding-top:4%;
-  color: black;
-  word-spacing: 0px;
-  letter-spacing: 2px;
-  margin-top: 10;
-  margin-left: 400;
+  padding-top:10%;
+  
 }
 
 
+#logo{
+  height: 1;
+}
+
+ #home{
+
+  background-image: url("moment1.jpg");
+  background-size: 100% 100%;
+  opacity: 0.9;
+  height: 100%;
+  
+ }
+ 
+ 
+ 
+/*#title{
+  text-shadow: 2px 2px #ff0000;
+}
+*/
 #title{
-  font-family: Montserrat, sans-serif;
-  margin-top: 385;
   text-transform: capitalize;
   text-indent: 1px;
-  word-spacing: 10px;
-  letter-spacing: 6px;
-  color: white;
-  font-weight: 400;
-  position: absolute;
-  margin-left: -500;
+ letter-spacing: 4px;
+ word-spacing: 10px;
+  line-height: 40;
+}
 
+#boxsignup{
+  opacity: 0.89  ;
+}
+
+#boxsignup h3{
+  font-family: Montserrat, sans-serif;    
+  letter-spacing: 2px;
+  font-weight: bold;
+}
 }
